Added Different Minds Text

--- a/public/mind.html
+++ b/public/mind.html
@@ -14,7 +14,9 @@
 
 <div class="row">
     <div class="card">
-      <p>Some text..</p>
+      <p>One of the most important takeaways I had from creative problem solving revolved around the idea of utilizing the collective brain power of everybody at your disposal. There were so many great examples of this throughout the course. The group project comes to mind as an obvious example, needing everybody to work together in order to imagine what William and Mary can or will look like in the future. We can all acknowledge that everybody has different strengths and different weaknessess, so of course that is going to apply to problem solving as well. The more brains you have working towards a problem, the more likely that one person will have an innovative solution for solving it.      </p>
+      <p>This also ties in with John Robinson's talk to the class, discussing how autism works for him. This strenghts and weaknessess of problem solving can be amplified for him, when compared to a more neurotypical person. He had a great affinity for solving some very advanced problems from a very young age, but because of how society was structured he was looked down upon as being weaker. Obviously we know much more about neurodiversity now, than we did back when he was a child, and we can better harness strengths and work around weaknesses.</p>
+      <p>But this does not just to apply to neurodiverse folks, it applies to everyone. Everybody thinks differently, and so gathering more brains is generally going to yield better results than working with fewer.</p>
     </div>
 </div>
 
