Added body for Self Reflection

--- a/public/self.html
+++ b/public/self.html
@@ -14,7 +14,10 @@
 
 <div class="row">
     <div class="card">
-      <p>Some text..</p>
+      <p>One major lesson that I learned this semester was how important it can be to take a step back and take care of yourself. We all have a lot of responsibilities, whether they’re classes, jobs, personal relationships, or dozens of other things. These responsibilities can start to take a toll on us, whether we notice or not, and can make our lives a lot less enjoyable. It is important that we let ourselves take a break once in a while, and allow ourselves to relax. </p>
+      <p>This can be related to Dr. Kelly Crace’s talk to our class, where he talked about learning to value things yourself, outside of the value that other’s place on it. He also put a lot of emphasis on working to better yourself, specifically choosing two things every day that you specifically want to work on. This, defining your own value, and constantly working towards it, can make life a lot more bareable. </p>
+      <p>This also links back to problem solving. If someone is overworked and miserable, then they are going to be a much less creative person. It is hard to be creative when you have other problems that are holding you back from trying to think outside of the box.
+      </p>
     </div>
 </div>
 
