Added text for pressure

--- a/public/pressure.html
+++ b/public/pressure.html
@@ -14,7 +14,9 @@
 
 <div class="row">
     <div class="card">
-      <p>Some text..</p>
+      <p>When working towards a goal, it is important to have some sense of urgency. This will help everybody to work just a little bit faster, and not overthink the simple things. There is a difficult balance, however, as too much pressure is going to overwhelm and totally shut down the ability to be creative. This creates an interesting challenge around solving problems, as creative problem solvers need to calibrate the amount of pressure they put on themselves.</p>
+      <p>This links back to one of our first classes, where Matt Allar came in and did an interesting exercise with our class. This involved constructing a box without any form of spoken or written communication. The conditions of what we needed to construct were rapidly changing, and there was a building feeling of pressure. I can’t speak to the experience of others, but for myself it felt like our boxes were working quite well up until a certain point. But at some point, the pressure became far too much, and the project started to fall apart into chaos.</p>
+      <p>This example may have been a bit on the sillier end, but it still relays a very important lesson. Different amounts of pressure are going to lead to different levels of success. Having no pressure is going to lead to nothing getting finalized, but having too much pressure leads to a stifling of creativity.</p>
     </div>
 </div>
 
