--- a/public/approach.html
+++ b/public/approach.html
@@ -14,7 +14,9 @@
 
 <div class="row">
     <div class="card">
-      <p>Some text..</p>
+      <p>TEST</p>
+      <p>TEST</p>
+      <p>TEST</p>
     </div>
 </div>
 
