Added text for Innovation and Opportunity

--- a/public/innovate.html
+++ b/public/innovate.html
@@ -14,9 +14,9 @@
 
 <div class="row">
     <div class="card">
-      <p>TEST</p>
-      <p>TEST</p>
-      <p>TEST</p>
+      <p>Being able to innovate and improve is the ultimate goal of a creative problem solver. We cannot just sit back and remain content with the same solutions which already exist, because then we aren’t creative. We also cannot waste our time and energy on solutions that are patently worse than what exists, because what kind of problem solver would that be?</p>
+      <p>We had two guest speakers who did a really good job of portraying this idea, Ben Branton from Snap-On and Scott Tidey from Hamilton Beach (three speakers if you count Mr. Tidey’s intern). These speakers did a really good job exemplifying this drive to improve. They both represented massive companies, and yet rather than being content with their current market share they still constantly innovate and release new and improved products. They also both represented seemingly simple industries, tools and appliances, and showed how in fact there is still a lot of innovation that goes into even that. </p>
+      <p>The desire for innovation is core to the mindset of creative problem solving. It is the motivation that drives all of the skills and practices of creative problem solving. </p>
     </div>
 </div>
 
