--- a/public/opportunity.html
+++ b/public/opportunity.html
@@ -14,9 +14,8 @@
 
 <div class="row">
     <div class="card">
-      <p>TEST</p>
-      <p>TEST</p>
-      <p>TEST</p>
+      <p>A major aspect to being a good creative problem solver is knowing how to recognize opportunities. It is important both to recognize new problems and novel solutions for them. Just because nobody knows about a problem does not mean that it does not exist, and in fact finding the problems that nobody has identified yet is one of the best things that one can do to improve the world. And the solutions to the world’s greatest challenges might already exist, we just haven’t put two and two together. </p>
+      <p>One specific example is Pixar, which we learned about by watching the documentary. Pixar was a computer imaging company that was not in the entertainment space at all. John Lasseter was an animator at Disney. When Disney told Lasseter that they did not want to pursue 3D computer generated animation, he left and began working with Pixar to pioneer CG animation. This brought the field of computer animation from a technical novelty to where it is today, as one of the most popular forms of animation. Computer animation solved a problem that nobody even recognized in the past, and now it is one of the most popular solutions.</p>
     </div>
 </div>
 
