Finished bodies (will go back and finalize/improve the text if I have time (SPOILER I will not have time))

--- a/public/approach.html
+++ b/public/approach.html
@@ -14,9 +14,9 @@
 
 <div class="row">
     <div class="card">
-      <p>TEST</p>
-      <p>TEST</p>
-      <p>TEST</p>
+      <p>Sometimes, when a problem seems too tough, what you really need to do is take a step back and view things from a different perspective. </p>
+      <p>Nobody exemplified this better than Paul Mapp, the history professor who came and talked about his work with us. While much of what he talked about seemed remarkable to us, and seemed remarkable to him too when he first started investigating, by changing our perspective and how we approached the ideas, they began to make a lot more sense. </p>
+      <p>This is a very important skill for us all to possess. The ability to solve problems often comes with roadblocks, times where it seems like a solution might not even exist. By stepping back and evaluating from a different approach, we can often find new and novel solutions to our problems. </p>
     </div>
 </div>
 
