--- a/public/dirge.html
+++ b/public/dirge.html
@@ -14,9 +14,9 @@
 
 <div class="row">
     <div class="card">
-      <p>TEST</p>
-      <p>TEST</p>
-      <p>TEST</p>
+      <p>One major source of creativity for many is past and present sadness. While tragedy is never something that a person should want, but once it is over it can become one of the greatest fonts of energy at a creative person’s disposal. </p>
+      <p>I named this section after the guest lecture by Steve Prince. The idea is the procession that often follows a funeral in New Orleans. The procession will begin with a dirge, an expression of mourning and sadness, but then it will transition into the second line, which is a period of celebration of the life of the person who has passed. This is such an interesting dichotomy, and one that can be very jarring to the uninitiated.</p>
+      <p>Being able to channel sadness into something useful is a very powerful tool in the toolbelt of creativity. Everybody has experienced sadness, at least to a certain degree, and so it is a potential source that we all can draw from in order to advance our creativity. </p>
     </div>
 </div>
 
