--- a/public/education.html
+++ b/public/education.html
@@ -14,9 +14,8 @@
 
 <div class="row">
     <div class="card">
-      <p>TEST</p>
-      <p>TEST</p>
-      <p>TEST</p>
+      <p>One interesting perspective that I saw during the course of this class was the idea of trying to redefine how we, as a society, view education. This is an interesting discussion in the realm of creative problem solving, as it is a course that teaches us to view every problem in a myriad of ways, and yet it is still a course being taught at a prestigious four-year university. </p>
+      <p>Mark Hofer came in and talked to our class specifically about the idea of micro-credentialing. This is an interesting concept for education that works instead of (or in conjunction with) a traditional college education. Micro-credentialing would allow for its students to gain only the specific skills that they need, while also verifying to the world that they have that specific skill. While this works against the traditional “liberal arts” ideal, it can be just as good, if not better, at teaching very specific and technical skills. Despite this, it is often viewed as less than a normal college experience. If the world changes its attitude towards education, valuing this idea of micro-credentialing more, it would overall lead to an improvement in productivity (even if it puts me, a graduating college senior, at a competitive disadvantage)</p>
     </div>
 </div>
 
