Quick Center Image Fix

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <div class="orbit">
     <div class="center-image">
-      <img src="assets/me2.png" alt="">
-      <img src="assets/me.png" alt="">
+      <img src="assets/Me2.png" alt="">
+      <img src="assets/Me.png" alt="">
     </div>
     <ul>
       <li>
